--- a/Recomendação.html
+++ b/Recomendação.html
@@ -43,17 +43,31 @@
         </tr>
 
         <tr>
-            <td>O Menino do Pijama Listrado</td>
+            <td>Madagascar 2</td>
             <td><a href="https://www.example.com/filme1">Assistir</a></td>
             <td>Filme retrata... .........</td>
-            <td><img src="" alt="teste"></td>
+            <td><img src="Imagens/madagascar.jpeg" alt="madagascar"></td>
         </tr>
 
         <tr>
-            <td>O Menino do Pijama Listrado</td>
+            <td>Carros o Filme</td>
             <td><a href="https://www.example.com/filme1">Assistir</a></td>
             <td>Filme retrata... .........</td>
-            <td><img src="" alt="teste"></td>
+            <td><img src="Imagens/carros.jpeg" alt="carro"></td>
+        </tr>
+
+        <tr>
+            <td>Up Altas Aenturas</td>
+            <td><a href="https://www.example.com/filme1">Assistir</a></td>
+            <td>Filme retrata... .........</td>
+            <td><img src="Imagens/down.jpeg" alt="Up"></td>
+        </tr>
+
+        <tr>
+            <td>Divertidamente 2</td>
+            <td><a href="https://www.example.com/filme1">Assistir</a></td>
+            <td>Filme retrata... .........</td>
+            <td><img src="Imagens/somentira.jpeg" alt="Divertidamente"></td>
         </tr>
 
     </table>
