--- a/Recomendação.html
+++ b/Recomendação.html
@@ -45,28 +45,36 @@
         <tr>
             <td>Madagascar 2</td>
             <td><a href="https://www.example.com/filme1">Assistir</a></td>
-            <td>Filme retrata... .........</td>
+            <td>Alex, Marty e outros animais do jardim zoológico do Central Park encontram uma maneira de fugir para Madagascar
+                quando os pinguins montam um avião destruído. A embarcação precária fica no ar apenas o suficiente para chegar ao
+                continente africano.</td>
             <td><img src="Imagens/madagascar.jpeg" alt="madagascar"></td>
         </tr>
 
         <tr>
             <td>Carros o Filme</td>
             <td><a href="https://www.example.com/filme1">Assistir</a></td>
-            <td>Filme retrata... .........</td>
+            <td>Ao viajar para a Califórnia, o famoso carro de corridas Relâmpago McQueen se perde e vai parar em Radiator Springs,
+                uma cidadezinha na Rota 66. Ele conhece novos amigos e aprende lições que mudam sua forma de encarar a vida.</td>
             <td><img src="Imagens/carros.jpeg" alt="carro"></td>
         </tr>
 
         <tr>
             <td>Up Altas Aenturas</td>
             <td><a href="https://www.example.com/filme1">Assistir</a></td>
-            <td>Filme retrata... .........</td>
+            <td>Carl é considerado uma ameaça pública e forçado a ser internado. Para evitar que isto aconteça, ele põe balões em
+                sua casa, fazendo com que ela levante voo. Carl quer viajar para uma floresta na América do Sul, onde ele e Ellie
+                sempre desejaram morar, mas descobre que um problema embarcou junto: Russell, um menino de 8 anos.</td>
             <td><img src="Imagens/down.jpeg" alt="Up"></td>
         </tr>
 
         <tr>
             <td>Divertidamente 2</td>
             <td><a href="https://www.example.com/filme1">Assistir</a></td>
-            <td>Filme retrata... .........</td>
+            <td>Riley se encontra mais velha, passando pela tão temida adolescência. Junto com o amadurecimento, a sala de controle
+                também está passando por uma adaptação para dar lugar a algo totalmente inesperado: novas emoções. As já conhecidas,
+                Alegria, Raiva, Medo, Nojinho e Tristeza não têm certeza de como se sentir quando novos inquilinos chegam ao local.
+            </td>
             <td><img src="Imagens/somentira.jpeg" alt="Divertidamente"></td>
         </tr>
 
